# claude-test-stock-check-a1

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  QwenAlphaMemory.md  README.md  SCRAPER_README.md  TODO.md  config.yml  deploy_pythonanywhere.sh  ksei_isat_scraper.py  pyproject.toml  pythonanywhere_wsgi.py  render.yaml  requirements.txt  workplus20250215001.txt  wsgi.py
.claude/: settings.local.json
docs/: ANOMALY_README.md  ARCHITECTURE.md  AlphaProject_Plan.md  PRODUCT_REVIEW.md  ROADMAP.md
src/instance/: alpha.db
src/stock_checker/: app.py  cli.py  fetcher.py  indicators.py  plotter.py  qpm.py  routes_qpm.py
src/stock_checker/alpha/: __init__.py
src/stock_checker/alpha/calculations/: anomaly.py  growth.py  industry.py  ratios.py  scores.py  valuation.py
src/stock_checker/alpha/models/: database.py  schemas.py
src/stock_checker/alpha/routes/: company.py  comparison.py  dashboard.py  export.py  financials.py  industry.py  modelling.py  news.py  portfolio.py  recommendations.py  scores.py  trends.py
src/stock_checker/alpha/services/: ai_analysis.py  company.py  comparison.py  data_fetcher.py  export.py  financials.py  industry.py  modelling.py  news.py  portfolio.py  scores.py  trends.py
src/stock_checker/alpha/static/alpha/: app.js  styles.css
src/stock_checker/alpha/static/alpha/components/: charts.js  forms.js  router.js  tables.js
src/stock_checker/alpha/templates/alpha/: index.html
src/stock_checker/idx_anomaly/: __init__.py  cli.py  config.py
src/stock_checker/idx_anomaly/features/: indicators.py  rules.py  scoring.py
src/stock_checker/idx_anomaly/notifiers/: email.py  teams.py
src/stock_checker/idx_anomaly/providers/: base.py  fundamentals_finnhub.py  price_invezgo.py  price_ohlc.py  price_yfinance.py  uma_idx.py
src/stock_checker/idx_anomaly/routes/: anomaly.py
src/stock_checker/idx_anomaly/storage/: repo_parquet.py  repo_sqlite.py
src/stock_checker/idx_anomaly/templates/idx_anomaly/: index.html
src/stock_checker/idx_anomaly/utils/: http.py  logging.py  parse.py
src/stock_checker/templates/: index.html  qpm_dashboard.html
tests/: test_qpm.py
tests/idx_anomaly/: conftest.py  test_indicators.py  test_parse_number.py  test_providers.py  test_rules.py  test_scoring.py  test_uma_parser.py
tests/idx_anomaly/fixtures/: ohlc_response.json  uma_page.html
watchlists/: seed_list.json
