[project]
name = "stock-checker"
version = "0.1.0"
description = "CLI stock market analysis tool with charts and technical indicators"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "matplotlib>=3.9",
    "mplfinance>=0.12.9",
    "numpy>=1.26",
    "flask>=3.0",
    "gunicorn>=22.0",
    "flask-sqlalchemy>=3.1",
    "cachetools>=5.3",
    "scipy>=1.12",
    "fpdf2>=2.7",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.scripts]
stock-checker = "stock_checker.cli:main"
stock-checker-web = "stock_checker.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_checker"]
